--- a/src/news.html
+++ b/src/news.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="plugin/css/reset.css">
     <link rel="stylesheet" href="plugin/css/common.css">
     <link rel="stylesheet" href="plugin/css/pagination.css">
+    <link rel="stylesheet" href="plugin/fonts/iconfont.css">
     <link rel="stylesheet" href="styles/news.css">
 </head>
 
@@ -24,34 +25,14 @@
             <div class="subNavBox fl">
                 <h1>新闻中心</h1>
                 <div>
-                    <div class="subNav ">新闻中心</div>
-                    <ul class="navContent ">
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                    </ul>
-                    <div class="subNav">关于我们</div>
-                    <ul class="navContent">
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                    </ul>
-                    <div class="subNav">业务系统</div>
-                    <ul class="navContent">
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                    </ul>
-                    <div class="subNav">招商加盟</div>
-                    <ul class="navContent">
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                        <li><a href="#">添加新闻</a></li>
-                        <li><a href="#">新闻管理</a></li>
-                    </ul>
+                    <div class="subNav "> <a href="#">通知公告</a> </div>
+
+                    <div class="subNav"><a href="#">资源动态</a> </div>
+
+                    <div class="subNav"> <a href="#">培训与活动</a> </div>
+
+                    <div class="subNav"> <a href="#">珞珈阅读广场</a> </div>
+
                 </div>
 
             </div>
@@ -67,30 +48,30 @@
                             <div class="selectList">
                                 <div class="listA-all">
                                     <a href="javascript:;" class="listA">全面搜索</a>
-                                    <a href="javascript:;" class="listA">选择项2</a>
-                                    <a href="javascript:;" class="listA">选择项3</a>
-                                    <a href="javascript:;" class="listA">选择项4</a>
-                                    <a href="javascript:;" class="listA">选择项5</a>
+                                    <a href="javascript:;" class="listA">通知公告</a>
+                                    <a href="javascript:;" class="listA">资源动态</a>
+                                    <a href="javascript:;" class="listA">培训与活动</a>
+                                    <a href="javascript:;" class="listA">珞珈阅读广场</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> 查询</span></div>
+                        <div class="search_box fl"><i class="iconfont icon-sousuo"></i><input type="text" placeholder="请输入关键词"><span> 查询</span></div>
                     </div>
                 </div>
                 <div class="titleList">
                     <div class="list_top">新闻中心</div>
                     <div class="list_body">
                         <ul>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
-                            <li><a href="#"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
+                            <li><a href="newsDetail.html"> 揭晓丨你的专属毕业纪念册，快来领取<span>2019/07/07</span></a></li>
                         </ul>
                     </div>
                     <div class="list_foot">
@@ -135,14 +116,10 @@
             });
             //侧边栏运行
             $(".subNav").click(function() {
-                $(".list_top").text($(this).text())
-                $(this).toggleClass("currentDd").siblings(".subNav").removeClass("currentDd")
-                $(this).toggleClass("currentDt").siblings(".subNav").removeClass("currentDt")
-                $(this).next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500)
-            })
-            $(".navContent").on("click", "li", function() {
-                    $(this).toggleClass("currentDd").siblings().removeClass("currentDd")
-                    $(this).parent().siblings().children().removeClass("currentDd")
+                    $(".list_top").text($(this).text())
+                    $(this).toggleClass("currentDd").siblings(".subNav").removeClass("currentDd")
+                        // $(this).toggleClass("currentDt").siblings(".subNav").removeClass("currentDt")
+                        // $(this).next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500)
                 })
                 //翻页功能,初始化翻页插件
             new Page({
@@ -166,8 +143,6 @@
 
                 }
             });
-
-
         })
     </script>
 </body>
